2005-06-10  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclresp.c: removed ns_returnbinary command. Added -binary
	flag to ns_return.

2005-06-10  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* include/ns.h Ns_SockBindUdp(), Ns_SockBindRaw() and Ns_SockBindUnix()
	are now exported.

	* nsd/init.c: NsInitBinder is also done for Windows as for Unix.

	* nsd/binder.c: Attempt to unify usage and call-conventions on various 
	Ns_SockListenXXX and Ns_SockBindXXX calls for various protocols 
	(tcp, udp, raw, unix).
	Also, parts not needed for windows build (pre-binding) are ifdef'ed out.
	Still open: handling of Unix-domain sockets on Windows. It might compile
	but will definitely not work because of the address parsing issues 
	(windows files do not begin with slash). This has to be sorted out.

2005-06-10  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/tclresp.test: updated to reflect parameters change 
	for ns_respond, new -binary flag

	* nsd/binder.c: make Ns_SockListenUnix to use prebound
	sockets if available.

2005-06-10  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/nswin32.c: Cosmetic changes (reformatted, untabified).
	Added NsRestoreSignals as no-op to make symetrical to Unix counterpart
	and avoid excessive ifdefs for Windows.
	Replaced GNU poll implementation.

	* nsd/unix.c: Cosmetic changes (reformatted, untabified).
	
2005-06-10  Stephen Deasey  <sdeasey@users.sf.net>

	* NEWS: Add latest news and remove news which belongs to other modules.

	* include/Makefile.global.in: Enable Tcl CONST checking.
	* include/nsthread.h:
	* include/nscheck.h: Add support for extra GCC checks. (RFE #1215725)

2005-06-09  Stephen Deasey  <sdeasey@users.sf.net>

	* include/Makefile.global.in: Remove TCL_DEFS which isn't needed
	now that autoheader is used.
	* configure.in: Add call to TEA_TIME_HANDLER for time defs.
	* configure:
	* include/config.h.in: Rebuild configure and config.h.

2005-06-09  Vlad Seryakov  <seryakov@users.sf.net>
